# atata

./: pyproject.toml
src/: run.py
src/atata/: __init__.py  ffmpeg.py  options.py  playlist.py  ranges.py  structures.py  subtitles.py
src/sts/: __init__.py  ffmpeg.py  options.py  subtitles.py
