[project]
name = "atata"
version = "0.1.0"
description = "CLI tool to playing over the same video with with and without subtitles"
readme = "README.md"
authors = [
    { name = "Alexander Gerbik", email = "alexander.gerbik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pysrt>=1.1.2",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[project.scripts]
atata = "atata:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
